[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plex-transfer"
version = "0.1.0"
description = "Transfer Plex playlists between servers and export to various formats"
authors = [{name = "Brian Hogan"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "plexapi>=4.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
plex-transfer = "transfer_playlist:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
